Fixed spacing and font-size of notice text

--- a/_sass/minimal-mistakes/_notices.scss
+++ b/_sass/minimal-mistakes/_notices.scss
@@ -41,8 +41,9 @@
 
   h4 + p {
     /* remove space above paragraphs that appear directly after notice headline*/
-    margin-top: 0;
+    margin-top: 0.5em;
     padding-top: 0;
+	font-size: $type-size-5;
   }
 
   a {
